--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "file-loader": "^6.2.0",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.1.6"
-  },
   "dependencies": {
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
